--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,5 +4,9 @@ version: '2'
 services:
   web:
     image: $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$CIRCLE_PROJECT_REPONAME:$CIRCLE_BUILD_NUM
+    environment: 
+      - AWS_DEFAULT_REGION=us-east-1
+      - CIRCLE_PROJECT_REPONAME=node-tutorial
+      - CIRCLE_BUILD_NUM=3
     ports:
     - "80:3000"
